Horizontal Navigation Bar

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
   <body>
 
+
+   
     <ul>
-        <li><a href="https://google.com">Home</a></li>
+        <li><a href="https://google.com" class="active">Home</a></li>
         <li><a href="https://google.com">News</a></li>
         <li><a href="https://google.com">Contact</a></li>
         <li><a href="https://google.com">About</a></li>
