--- a/index.html
+++ b/index.html
@@ -4,20 +4,31 @@
   <head>
     <meta charset="UTF-8">
     <title>Untitled Document</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
 
-
-   
-    <ul>
-        <li><a href="https://google.com" class="active">Home</a></li>
-        <li><a href="https://google.com">News</a></li>
-        <li><a href="https://google.com">Contact</a></li>
-        <li><a href="https://google.com">About</a></li>
-    </ul>
-
+    <header class="site-header">
+        <header class="container site-header-inner">
+            標題
+        </header>
+    </header>
+    <header class="site-header">
+        <div class="site-header-inner"></div>
+    </header>
+    <div class="site-main">
+        <div class="container site-main-inner">
+            <div class="sidebar">
+                <div class="top">1234</div>
+            </div>
+            <div class="content"></div>
+        </div>
+    </div>
+    <footer class="site-footer">
+        <div class="site-footer-inner"></div>
+    </footer>
   </body>
 
 </html>
